--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-9.73MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-11.95MB/s(Youtube:不良林), server: tw.node.qchwnd.moe, port: 44608, type: trojan, password: d4fd37ae-893c-4486-b59a-da43ce2ae0f9, sni: tw.node.qchwnd.moe, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.06MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-469.6KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-15.95MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63087, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: in02.dns2333.xyz}}
-  - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 198.57.27.172, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 198.57.27.172, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇬🇧 英国-2.59MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-471.4KB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23331, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
+  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23531, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
   - {name: 🇸🇬 新加坡-2.42MB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-509.6KB/s(Youtube:不良林), server: iepl7.dcnode.me, port: 10037, type: ss, cipher: aes-128-gcm, password: d307b05c-2341-4ffa-b376-9d3a46cf7ac9}
+  - {name: 🇨🇳 中国-2.46MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇰🇷 韩国-3.24MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 25932, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
+  - {name: 🇨🇳 中国-4.10MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23131, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
+  - {name: 🇨🇳 中国-8.68MB/s(Youtube:不良林), server: x.mceee.xyz, port: 26041, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-496.1KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20004, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-306.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.95MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-469.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-509.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-496.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
