--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-471.4KB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23331, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
-  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23531, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
-  - {name: 🇸🇬 新加坡-2.42MB/s(Youtube:不良林), server: sg.sharecentrepro.tk, port: 443, type: trojan, password: sharecentre, sni: sg.sharecentrepro.tk, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.46MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16010, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇰🇷 韩国-3.24MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-470.7KB/s(Youtube:不良林), server: 5.183.179.139, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇯🇵 日本-3.18MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-9.73MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.26MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-9.61MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
   - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 25932, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
   - {name: 🇨🇳 中国-4.10MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23131, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
   - {name: 🇨🇳 中国-8.68MB/s(Youtube:不良林), server: x.mceee.xyz, port: 26041, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-470.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-470.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-470.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-470.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-470.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-470.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.24MB/s(Youtube:不良林)
+      - 🇩🇪 德国-470.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.68MB/s(Youtube:不良林)
