--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.99MB/s(Youtube:不良林), server: cm1-tw.jflashfal.xyz, port: 18556, type: ssr, cipher: chacha20-ietf, password: DXpeG4IEEFY5LQyw, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 1096:JkH9mOx9dKnolmwg, obfs-param: 3c55e1096.microsoft.com}
-  - {name: 🇨🇳 中国-12.41MB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-195.7KB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 24935, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
-  - {name: 🇯🇵 日本-3.10MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.31MB/s(Youtube:不良林), server: cm1-tw.jflashfal.xyz, port: 18555, type: ssr, cipher: chacha20-ietf, password: DXpeG4IEEFY5LQyw, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 1096:JkH9mOx9dKnolmwg, obfs-param: 3c55e1096.microsoft.com}
-  - {name: 🇨🇳 中国-7.87MB/s(Youtube:不良林), server: cm1-tw.jflashfal.xyz, port: 18554, type: ssr, cipher: chacha20-ietf, password: DXpeG4IEEFY5LQyw, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 1096:JkH9mOx9dKnolmwg, obfs-param: 3c55e1096.microsoft.com}
-  - {name: 🇨🇳 中国-9.75MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.99MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.56MB/s(Youtube:不良林), server: 167.172.56.225, port: 54141, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇨🇳 中国-8.05MB/s(Youtube:不良林), server: cm1.jflashfal.xyz, port: 18352, type: ssr, cipher: chacha20-ietf, password: DXpeG4IEEFY5LQyw, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 1096:JkH9mOx9dKnolmwg, obfs-param: 3c55e1096.microsoft.com}
+  - {name: 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.92MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇬🇧 英国-2.89MB/s(Youtube:不良林), server: 167.172.56.225, port: 54141, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇨🇳 中国-1.77MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-467.7KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-9.92MB/s(Youtube:不良林), server: cm1-tw.jflashfal.xyz, port: 18551, type: ssr, cipher: chacha20-ietf, password: DXpeG4IEEFY5LQyw, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 1096:JkH9mOx9dKnolmwg, obfs-param: 3c55e1096.microsoft.com}
+  - {name: 🇬🇧 英国-1.22MB/s(Youtube:不良林), server: 167.172.56.211, port: 14512, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇸🇬 新加坡-2.52MB/s(Youtube:不良林), server: 103.253.26.134, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 103.253.26.134}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.99MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.92MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
